# Silence-Cutter

./: .gitignore  MANIFEST.in  README.ko.md  README.md  build-release.sh  index.html  pyproject.toml  requirements-mac.txt  run.command  run.sh  setup_mac.sh
.bg-shell/: manifest.json
.omc/: project-memory.json
.omc/sessions/: 0831745a-02f2-41a7-8032-88e545e196f3.json  fd4d30e8-d998-4198-bad7-99261fa5e92a.json
.omc/state/: hud-state.json  hud-stdin-cache.json  idle-notif-cooldown.json  mission-state.json
SilenceCutterApp/: Package.swift
SilenceCutterApp/.build/: build.db  debug.yaml  plugin-tools.yaml
SilenceCutterApp/Sources/: App.swift  ContentView.swift  L10n.swift
SilenceCutterApp/Sources/Models/: AnalysisService.swift  AnalysisSettings.swift
SilenceCutterApp/Sources/Services/: ExportService.swift  PythonBridge.swift  PythonEnvironment.swift
SilenceCutterApp/Sources/Views/: AnalysisProgressView.swift  AnalyzeDialogView.swift  ClipCardView.swift  FindReplaceView.swift  SegmentListView.swift  SettingsView.swift  TimelineBarView.swift  TranscriptEditorView.swift  VideoPlayerView.swift  VideoPreviewView.swift  WordFlowView.swift
SilenciApp/: PLAN.md  Package.swift
SilenciApp/Sources/: App.swift  ContentView.swift  L10n.swift
SilenciApp/Sources/Models/: AnalysisService.swift  AnalyzeResponse.swift  Segment.swift
SilenciApp/Sources/Resources/: AppIcon.icns
silence_cutter/: __init__.py  __main__.py  app.py  capcut.py  extract.py  fcpxml.py  itt.py  pipeline.py  retranscribe.py  server.py  srt.py  subtitles.py  transcribe.py  vad.py
(+173 files in other folders)
